# edgehost

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  README.md  TODO.md
cmake/: EdgeDepsCommon.cmake  EdgeLoadPins.cmake  FindLibanim.cmake  FindLibchssh.cmake  FindLibharness.cmake  FindLibnetconf.cmake  FindLibrest.cmake  FindLibsim.cmake  FindLibslack.cmake  FindLibteams.cmake  FindLibwebmap.cmake  FindLibyaml.cmake  FindLibyang.cmake  FindPique.cmake  FindShaggy.cmake
config/: edgehost.ca-lab.yaml  edgehost.e7-lab.yaml  edgehost.example.yaml  edgehost.lab.yaml  edgehost.status-map-e7.yaml  edgehost.status-map-junos.yaml  edgehost.status-map.yaml
deploy/: README.md  edgehost.service  prometheus-scrape.snippet.yml
docs/: DOMAIN.md  README.md
docs/decisions/: 001-pure-c-choice.md  002-core-host-split.md  003-event-gated-memory.md  005-yaml-sighup-apply.md  007-state-store.md  008-plugin-abi-pending.md  011-fuzz-and-sim-class-a.md  012-agent-ready-documentation.md  013-auth-rbac-lab-session.md  014-openai-proxy-pending.md  014-tls-openssl-edgehost.md  015-pqproxy-notify.md  016-extra-ns-deploy.md  018-e7-netconf-callhome.md  019-clickhouse-e7-events.md
docs/designs/: e7-netconf-callhome.md
docs/guides/: ca.md  clickhouse.md  e7-callhome.md  e7-config-inventory.md  lab-e2e.md  prometheus.md  state-namespaces.md  status-map.md
fuzz/: fuzz_edgehost_a.c
include/: edge_auth.h  edge_auth_host.h  edge_ca.h  edge_clickhouse.h  edge_config.h  edge_config_hup.h  edge_debug.h  edge_e7_callhome.h  edge_e7_config.h  edge_e7_event_apply.h  edge_explain.h  edge_http1_serve.h  edge_iouring.h  edge_metrics.h  edge_notify.h  edge_openai_proxy.h  edge_outbound.h  edge_pending.h  edge_pg.h  edge_plugin.h  edge_plugin_host.h  edge_pq_sidecar.h  edge_sim_main.h  edge_slack_plugin.h  edge_state.h  edge_state_notify.h  edge_static.h  edge_teams_plugin.h  edge_tls.h  edge_ws.h  edgecore.h  host_alloc.h
include/clickhouse/: clickhouse-async.h
scripts/: cpu-flame-perf.sh  e7-callhome-e2e.sh  lab-e2e.sh  run-ca.sh  run-documentation.sh  run-explain.sh  run-status-map-e7.sh  run-status-map-junos.sh  run-status-map.sh
spa/: app.css  app.js  home.js  index.html  shell.js
spa/ca/: ca.js  index.html
spa/devices/: devices.js  index.html
spa/documentation/: documentation.js  index.html
spa/documentation/lessons/: two_port_tap.anim
spa/e7/: e7.js  index.html
spa/explain/: explain_boot.js  explain_player.js  index.html
spa/explain/player/: anim.wasm  demo.css  narrator.js  wasm_host.js  webgpu_renderer.js
spa/explain/templates/: optical_path.tmpl  outage_story.tmpl
spa/junos/: index.html  junos.js
spa/lab/: console.js  index.html
spa/map/: index.html  map_boot.js
sql/clickhouse/: 001_e7_netconf_events.sql
sql/postgres/: 001_ont_status.sql  002_ca.sql  003_e7_config.sql
src/core/: auth_rbac.c  edge_config.c  edgecore.c  pending_table.c  state_store.c
src/host/: auth_host.c  clickhouse_async.c  config_hup.c  config_yaml.c  e7_callhome.c  e7_config_xml.c  e7_event_apply.c  edge_ca.c  edge_clickhouse.c  edge_debug.c  edge_explain.c  edge_http1_serve.c  edge_metrics.c  edge_pg.c  host_alloc.c  iouring_loop.c  main.c  notify_apply.c  outbound_http.c  plugin_host.c  pq_sidecar.c  sim_main.c  state_notify.c  static_files.c  tls_server.c  ws_stream.c
src/plugins/: openai_proxy.c  slack_plugin.c  teams_plugin.c
tests/: deps_smoke.c  test_auth.c  test_clickhouse_xml.c  test_e7_callhome.c  test_e7_config_xml.c  test_e7_event_apply.c  test_edgecore_alloc.c  test_edgecore_config.c  test_edgecore_smoke.c  test_iouring_static.c  test_junos_identity.c  test_openai_proxy.c  test_pending_plugin.c  test_plugin_stubs.c  test_sidecar_notify.c  test_sim_main.c  test_state_store.c  test_static_files.c  test_tls_server.c  test_ws_stream.c
tests/fixtures/e7/: calix_axos_running_config_sample.xml  calix_e7_running_config_sample.xml  calix_exa_user_login.xml  lab_v1_identity.xml  lab_v1_ont_down.xml  lab_v1_ont_up.xml  lab_v1_ont_up_geo.xml  lab_v1_pon_alarm.xml
